--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,6 @@
     {{ content }}
     <script src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
     <script src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
+    {{ script }}
   </body>
 </html>
