--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#FAFAFA">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}">
-    <script async src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
-    <script async src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
+    <script defer src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
+    <script defer src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
   </head>
   <body>
     {{ content }}
