--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,6 @@
       <script src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
       <script src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
     {% endcapture %}
-    {{ content | replace: "<script>", script + "<script>"  }}
+    {{ content | replace: "<script>", {{ script | append: "<script>" }} }}
   </body>
 </html>
