--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,8 @@
     {% capture script %}
       <script src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
       <script src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
+      <script>
     {% endcapture %}
-    {{ content | replace: "<script>", {{ script | append: "<script>" }} }}
+    {{ content | replace: "<script>", script }}
   </body>
 </html>
