--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#FAFAFA">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}">
+    <style>a{color:#4169E1}</style> 
   </head>
   <body>
     {% capture script %}
