--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
     <meta name="Description" content="This is a tool website.">
     <meta name="theme-color" content="#FAFAFA">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}">
+    <link rel="preload" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="styles.css"></noscript>
+    <!--link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}"-->
     <style>a{color:#4169E1}</style> 
   </head>
   <body>
