--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
     <style>a{color:#4169E1}</style> 
   </head>
   <body>
-    {% capture script %}
+    {%- capture script -%}
       <script src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
       <script src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
       <script>
-    {% endcapture %}
-    {{ content | replace: "<script>", script }}
+    {%- endcapture -%}
+    {{- content | replace: "<script>", script -}}
   </body>
 </html>
