--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="zh">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
-    <meta name="Description" content="This is a tool website.">
-    <meta name="theme-color" content="#fafafa">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}">
+    <meta name="Description" content="This is a tool website."/>
+    <meta name="theme-color" content="#fafafa"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}"/>
     <style>a{color:#4169E1}</style> 
   </head>
   <body>
