--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#fafafa"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}"/>
-    <style>a{color:#4169E1}</style> 
+    <style>a{color:#0071eb}</style> 
   </head>
   <body>
     {%- capture script -%}
