--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
     <meta name="Description" content="This is a tool website.">
     <meta name="theme-color" content="#fafafa">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v={{ "now" | date: "%s" }}">
+    <link rel="apple-touch-icon" href="/favicon.ico?v={{ "now" | date: "%s" }}">
     <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}">
     <style>a{color:#0071eb}</style> 
   </head>
