--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://it.mcsmds.tk/assets/styles/bootstrap.css?v={{ "now" | date: "%s" }}">
     <style>a{color:#0071eb}</style> 
   </head>
-  <body>
+  <body class="d-print-none">
     {%- capture script -%}
       <script src="https://it.mcsmds.tk/assets/scripts/jquery.js?v={{ "now" | date: "%s" }}"></script>
       <script src="https://it.mcsmds.tk/assets/scripts/bootstrap.js?v={{ "now" | date: "%s" }}"></script>
